# vps_manager

./: .env.sample  .gitignore  LICENSE  Makefile  README.md  TASKS.md  manage.py  pyproject.toml  requirements
api/: apps.py  pagination.py  serializers.py  urls.py  viewsets.py
tests/: test_vps_api.py
users/: admin.py  constants.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
vps/: admin.py  apps.py  constants.py  models.py
vps/migrations/: 0001_initial.py  0002_alter_vps_status.py  0003_alter_vps_uid.py
vps_manager/: asgi.py  settings.py  urls.py  wsgi.py
